Bug 503221 - Multi-file selection does not work when Dolphin is opened with a pre-selected file
Summary: Multi-file selection does not work when Dolphin is opened with a pre-selected...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-23 11:35 UTC by Riccardo Robecchi
Modified: 2025-04-26 18:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Riccardo Robecchi 2025-04-23 11:35:03 UTC
SUMMARY
When Dolphin opens and shows a selected file, e.g. when clicking on "open containing folder" in Firefox after downloading a file, the intended file is correctly selected and acts normally, i.e. it opens if you press "enter" on the keyboard. However, if you press "shift" to select all files between that one and a second, the selection does not work. You have to manually select the already-selected file, and then select the second one.
This is reproducible on all my machines, running either Neon or Arch.

STEPS TO REPRODUCE
1. Download a file through Firefox
2. Open the containing folder
3. While pressing "shift", select another file so that all the files in between those two should be selected.

OBSERVED RESULT
The file is selected as expected, however the "shift selection" does not work.

EXPECTED RESULT
The "shift selection" works.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon, Arch Linux
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.13.0
Qt Version: 6.8.2, 6.9.0

ADDITIONAL INFORMATION
Comment 1 Akseli Lahtinen 2025-04-23 11:41:26 UTC
Can confirm

dolphin 25.07.70
Operating System: Fedora Linux 42
KDE Plasma Version: 6.3.80
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Kernel Version: 6.14.2-300.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 2 Bug Janitor Service 2025-04-24 13:47:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/964
Comment 3 Akseli Lahtinen 2025-04-26 18:31:59 UTC
Git commit b64bf8ca69c473de973eddef3d137fea80acb968 by Akseli Lahtinen.
Committed on 26/04/2025 at 18:22.
Pushed by akselmo into branch 'master'.

DolphinView: Don't end anchored selection in updateSelectionState

Do not end anchored selection when selection state is updated, such as
when Dolphin is started with --select "thing.txt" flag.

If we end here, and user wants to press shift to select from
current item to X items, this would cause the anchored selection
to start from the clicked item, not from the first selected item.

M  +0    -1    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/b64bf8ca69c473de973eddef3d137fea80acb968